# tetrablocks

./: CMakeLists.txt  license.md  readme.md
assets/data/: splashes.txt
assets/shaders/: box.frag  box.vert  canvas.frag  canvas.vert  main.frag  main.vert  text.frag  text.vert  triangle.frag  triangle.vert  vector.frag  vector.vert
include/tetrablocks/: Constants.hpp  Utils.hpp
include/tetrablocks/game/: Game.hpp  ShapeFactory.hpp
include/tetrablocks/game/core/: Assets.hpp  IController.hpp  IDialog.hpp  IScreen.hpp
include/tetrablocks/game/dialog/: DialogEnd.hpp  DialogPause.hpp  DialogQuit.hpp
include/tetrablocks/game/screen/: ScreenGame.hpp  ScreenMain.hpp
include/tetrablocks/game/ui/: Button.hpp
include/tetrablocks/graphics/: Font.hpp  Renderer.hpp  Shader.hpp  Texture.hpp
include/tetrablocks/model/: Block.hpp  Board.hpp  Shape.hpp
include/tetrablocks/utils/: Utils.hpp
libs/LodePNG/: CMakeLists.txt
libs/LodePNG/src/: lodepng.cpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
src/: Utils.cpp  main.cpp
src/game/: Game.cpp  ShapeFactory.cpp  TetraGame.cpp  TetraGame.hpp
src/game/base/: IGameController.hpp  IScreen.hpp  IWidget.hpp
src/game/dialog/: DialogEnd.cpp  DialogPause.cpp  DialogQuit.cpp
src/game/enums/: GameState.hpp
src/game/models/: Board.cpp  Board.hpp  Shape.cpp  Shape.hpp
src/game/screen/: ScreenGame.cpp  ScreenMain.cpp
src/game/screens/: ScreenMain.cpp  ScreenMain.hpp
src/game/ui/: Button.cpp  Button.hpp
src/graphics/: Canvas.cpp  Canvas.hpp  Color.cpp  Color.hpp  Font.cpp  Font.hpp  Path.cpp  Path.hpp  Renderer.cpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/graphics/gl/: gl.c  gl.cpp  gl.h
src/model/: Block.cpp  Board.cpp  Shape.cpp
src/render/: ShapeRenderer.cpp  ShapeRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp
src/utils/: Assets.cpp  Assets.hpp
